# MasterThesis

./: .gitignore  CMakeLists.txt  Doxyfile  MasterThesis.kdev4  MasterThesis.pro  README.md
src/: analyzer.cpp  analyzer.h  gathread.cpp  gathread.h  geneticalgorithm.cpp  geneticalgorithm.h  helper_functions.cpp  helper_functions.h  main.cpp  matrix.cpp  matrix.h  measure.cpp  measure.h  problem.cpp  problem.h  qap.cpp  qap.h  randomkeysolution.cpp  randomkeysolution.h  salbp.cpp  salbp.h  settings.cpp  settings.h  taboosearch.cpp  taboosearch.h  taboosearchreferenceset.cpp  taboosearchreferenceset.h  task.cpp  task.h  tsprocessorsettings.cpp  tsprocessorsettings.h  tsreferenceset.cpp  tsreferenceset.h  tsthread.cpp  tsthread.h
src/analyzer/: analyzer.cpp  analyzer.h  gathread.cpp  gathread.h  tsreferenceset.cpp  tsreferenceset.h  tsthread.cpp  tsthread.h
src/problem/: problem.cpp  problem.h  qap.cpp  qap.h  salbp.cpp  salbp.h  task.cpp  task.h  task_storage.cpp  task_storage.h
src/solution/: perm_solution.cpp  perm_solution.h  qap_solution.cpp  qap_solution.h  randomkeysolution.cpp  randomkeysolution.h  salbp_solution.cpp  salbp_solution.h  solution.cpp  solution.h  solutionbase.cpp  solutionbase.h
